force-app/main/default/objects/FEC_Notification_Template_Channel__c/FEC_Notification_Template_Channel__c.object-meta.xml
<CustomObject>
    <description>Bảng dữ liệu lưu thông tin Template và Channel</description>
    <label>Notification Template Channel</label>
    <nameField>
        <displayFormat>NTCN - {0}</displayFormat>
        <label>Notification Template Channel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Template Channel</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>