force-app/main/default/objects/FEC_Notification_Template_Channel__c/fields/FEC_Notification__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notification__c</fullName>
    <description>Thông tin cấu hình Notification</description>
    <label>Notification</label>
    <referenceTo>FEC_Notification__c</referenceTo>
    <relationshipLabel>Notification Template Channel</relationshipLabel>
    <relationshipName>Notification_Template_Channel</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>