force-app/main/default/objects/FEC_Notification_Template_Channel__c/fields/FEC_Notification_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notification_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin Channel để gửi Notification</description>
    <label>Notification Channel</label>
    <referenceTo>FEC_Notification_Channel__c</referenceTo>
    <relationshipLabel>Notification Template Channel</relationshipLabel>
    <relationshipName>Notification_Template_Channel</relationshipName>
    <type>Lookup</type>
</CustomField>