force-app/main/default/objects/FEC_Notification_Template_Channel__c/fields/FEC_Notification_Template__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notification_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin Template liên quan đến Notification và Notification Channel</description>
    <label>Notification Template</label>
    <referenceTo>FEC_Template__c</referenceTo>
    <relationshipLabel>Notification Template Channel</relationshipLabel>
    <relationshipName>Notification_Template_Channel</relationshipName>
    <type>Lookup</type>
</CustomField>